working on the gui system